2007-07-12  Jonathan Pobst  <monkey@jpobst.com>

	* SystemInformation.cs, Theme.cs, XplatUI.cs, XplatUIDriver.cs,
	XplatUIWin32.cs: Implement SystemInformation 2.0 properties.

2007-07-12  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DateTimePicker.cs: If there's no part format specifier, return an
	  empty string.

2007-07-12  Jonathan Pobst  <monkey@jpobst.com>

	* FlatButtonAppearance.cs: Throw NotSupportedException for a
	Transparent BorderColor.

2007-07-12  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridView.cs, TextControl.cs, ProgressBar.cs, PrintDialog.cs,
	  MessageBox.cs, ButtonBase.cs, PageSetupDialog.cs, NumericUpDown.cs,
	  X11Dnd.cs, Binding.cs, DataGrid.cs, AxHost.cs,
	  LinkLabelLinkClickedEventArgs.cs, TextRenderer.cs, Label.cs,
	  LinkLabel.cs, TreeNode.cs, BindingSource.cs, TabPage.cs,
	  TextBoxBase.cs, BindingNavigator.cs, Application.cs,
	  ToolStripPanel.cs, TabControl.cs, ThemeClearlooks.cs, TreeView.cs:
	  Remove warnings.
	* X11Structs.cs: Remove warnings, add ToString implementations.

2007-07-11  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* XplatUIX11.cs: Translate min/max size according to the actual min/max
	  size, and not the current size. Fixes #81798.

2007-07-11  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* XplatUIX11.cs: Fix #80822 again (DefWndProc can be reached before
	  XplatUI.CreateWindow returns, in which case the hwnd isn't assigned
	  to the control yet).

2007-07-11  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* PropertyGridTextBox.cs: Add a method that sends any forwarded
	  mousedowns to the contained textbox.
	* X11Structs.cs: More ToString implementation.
	* PropertyGridView.cs: Forward any mousedowns to the textbox, fixes
	  #81791.

2007-07-11  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* PropertyGridView.cs: Add a null-check, fixes a few tests.

2007-07-10  Jonathan Pobst  <monkey@jpobst.com>

	* TableLayoutPanelCellPosition.cs: TypeConverter.

2007-07-10  Rolf Bjarne Kvinge <RKvinge@novell.com> 
